k8s/prometheus.yaml
# Triển khai Prometheus
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: soc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: config-volume
          mountPath: /etc/prometheus/
      volumes:
      - name: config-volume
        configMap:
          name: prometheus-config
---
# Service để Grafana kết nối vào
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: soc
spec:
  selector:
    app: prometheus
  ports:
    - port: 9090
      targetPort: 9090
